<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">IrTerm V2</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="item_clicked">%s clicked</string>
    <string name="show_as_5c_grid">Show as 5c grid</string>
    <string name="show_as_list">Show as list</string>
    <string name="show_as_3c_grid">Show as 3c grid</string>
    <string name="bt_connect">Bluetooth</string>
    <string name="save_code">Save</string>
    <string name="load_code">Load</string>
    <string name="export_code">Export</string>
    <string name="import_code">Import</string>
</resources>
